# Exam_Robotica

./: README.md
Ejercicio1_ws/: README.txt
Ejercicio1_ws/src/ros2_tutorials/robot_description/launch/: view_robot.launch2.py  view_robot.launch3.py
Ejercicio1_ws/src/ros2_tutorials/robot_description/urdf/: pulgar.urdf  todos.urdf
Ejercicio1_ws/src/ros2_tutorials/visual_pubsub/: setup.py
Ejercicio1_ws/src/ros2_tutorials/visual_pubsub/visual_pubsub/: inverse_kinematics2.py  inverse_kinematics3.py
Ejercicio2_ws/: README.txt
Ejercicio2_ws/src/py_pubsub/: setup.py
Ejercicio2_ws/src/py_pubsub/py_pubsub/: display.py  filter.py  sensor1.py  sensor2.py  sensor3.py
Ejercicio2_ws/src/ucb_interfaces/: CMakeLists.txt  package.xml
