<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ucb_interfaces</name>
  <version>0.0.0</version>
  <description>Interfaces for UCB robotics project</description>
  <maintainer email="isaac@todo.todo">isaac</maintainer>
  <license>Apache-2.0</license>

  <depend>rosidl_default_runtime</depend>
  <build_depend>rosidl_default_generators</build_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
